src/test/ui/issue-50714.stderr
error[E0646]: `main` function is not allowed to have a `where` clause
  --> $DIR/issue-50714.rs:13:17
   |
LL | fn main() where fn(&()): Eq {} //~ ERROR [E0646]
   |                 ^^^^^^^^^^^ `main` cannot have a `where` clause

error: aborting due to previous error

For more information about this error, try `rustc --explain E0646`.
